--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p id="js-error-message" class="error-message"></p>
             <section id="results" class="hidden">
                 <h2>Search results</h2>
-                <ul id="results-list">
-                </ul>
+                <div id="results-list">
+                </div>
             </section>
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="scripts/index.js" async defer></script>
